fix for whitespace and delaying the link

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ div#container{
     justify-content: left; /* align horizontal */
     align-items: center; /* align vertical */
     height: 90vh;  
-    padding-left: 300px;
+    padding-left: 25%;
 }
 
 
@@ -27,6 +27,14 @@ div#links {
     align-items: center; /* align vertical */
     float: none;
     top: 50vh;
+}
+div#target3{
+    float: left;
+}
+
+div#target3:after {
+    content: ".";
+    visibility: hidden;
 }
 
 a{
